--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "front-end-prototype",
   "version": "0.0.1",
-  "homepage": "https://github.com/chyld/front-end-prototype",
+  "homepage": "http://andrewtdinh.com",
   "authors": [
-    "Chyld Medford <chyld.medford@gmail.com>"
+    "Andrew Trieu Dinh <andrewdinh74@yahoo.com>"
   ],
   "license": "BSD",
   "dependencies": {
