--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "front-end-prototype",
   "version": "0.0.1",
-  "homepage": "https://github.com/chyld/front-end-prototype",
-  "author": "Chyld Medford <chyld.medford@gmail.com>",
+  "homepage": "http://andrewtdinh.com",
+  "author": "Andrew Trieu Dinh <andrewdinh74@yahoo.com>",
   "license": "BSD",
   "devDependencies": {
     "bower": "^1.4.1",
